Update single rule endpoint to add disabled field
