# server/api/v2/openapi.json
@@ -770,6 +770,11 @@
                           "items": {
                             "type": "string"
                           }
+                        },
+                        "disabled": {
+                          "description": "Whether the rule has been disabled/acked for all clusters or not.",
+                          "type": "boolean",
+                          "example": "false"
                         }
                       }
                     },
